# CmakeStudy

./: .gitignore  ReadMe.md
CustomCompilationOptions/: CMakeLists.txt  main.cpp
CustomCompilationOptions/math/: CMakeLists.txt  MathFunctions.cpp
InstallAndTest/: CMakeLists.txt
InstallAndTest/math/: CMakeLists.txt  MathFunctions.h
MultiDirectoriesMultiFiles/: CMakeLists.txt  main.cpp
MultiDirectoriesMultiFiles/math/: CMakeLists.txt
SingleDirectoryMultiFiles/: CMakeLists.txt  main.cpp
SingleSourceFile/: CMakeLists.txt  main.cpp
